Fix Text area wrapping

--- a/sass/mail.scss
+++ b/sass/mail.scss
@@ -28,7 +28,11 @@ body.page-printmail {
                 width: 120px;
             }
             input {
-                min-width: 250px;
+                min-width: 0;
+
+                @include breakpoint(430px) {
+                    min-width: 250px;                    
+                }
             }
         }
         .form-item-txt-to-addrs {
@@ -40,10 +44,29 @@ body.page-printmail {
                 width: 120px;
             }
             .form-textarea-wrapper {
-                min-width: 250px;
+                flex: 1 1 calc(100% - 120px);
+                min-width: 0;
+
+                @include breakpoint(430px) {
+                    min-width: 250px;                    
+                }
             }
             textarea#edit-txt-to-addrs {
                 width: 100%;
+            }
+        }
+        .form-type-item > a{
+            flex: 1 1 calc(100% - 120px);
+            min-width: 0;
+            word-break: break-word;
+
+            @include breakpoint(450px) {
+                min-width: 400px;                    
+            }
+        }
+        .form-item-txt-message {
+            .form-textarea-wrapper {
+                flex: 100%;
             }
         }
 
